manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      serviceAccountName: vault
      containers:
      - name: vault
        image: hashicorp/vault:1.12.0
        args:
          - "server"
          - "-config=/vault/config/vault-config.hcl"
        ports:
          - containerPort: 8200
            name: http
        volumeMounts:
          - name: config
            mountPath: /vault/config
          - name: vault-data
            mountPath: /vault/data
      volumes:
        - name: config
          configMap:
            name: vault-config
        - name: vault-data
          persistentVolumeClaim:
            claimName: vault-data-pvc  # Use the PVC created above
