manifest/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
  namespace: vault
spec:
  to:
    kind: Service
    name: vault
  port:
    targetPort: http
  tls:
    termination: edge
